--- a/styles/main.css
+++ b/styles/main.css
@@ -5,10 +5,9 @@
 }
 
 body {
-  font-family: 'Courier New', monospace;
+  font-family: "Courier New", monospace;
   font-size: 16px;
-  background: #272727;
-  color: #fff;
+  color: #1e1e1e;
   min-height: 100vh;
   padding: 20px;
 }
@@ -16,7 +15,7 @@ body {
 header {
   text-align: center;
   padding: 4rem 2rem;
-  border-bottom: 3px solid #fff;
+  border-bottom: 3px solid #888;
   margin-bottom: 4rem;
 }
 
@@ -48,7 +47,7 @@ main {
 }
 
 .project-card {
-  border: 3px solid #000;
+  border: 3px solid #888;
   background: #e7e7e7;
   color: #000;
   padding: 2rem;
@@ -123,7 +122,7 @@ main {
 
 /* Scanline effect */
 body::before {
-  content: '';
+  content: "";
   position: fixed;
   top: 0;
   left: 0;
